Adding handle based spec config Adding scope bind Modifying scope container add to create ethernet cards when necessary Using pci address of ehternet card for identity in tether config
